# lollypop-viperfx

./: .buildconfig  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml-because-it-is-broken  .gitmodules  AUTHORS  AUTHORS.in  Makefile.am  README.md  TODO  autogen.sh  configure.ac  generate_data.sh  index.html  lollypop-cli  lollypop-cli.in  lollypop.in  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Lollypop.json  params.json  requirements.txt  rhythmbox2lollypop  rhythmbox2lollypop.in  run.sh
.github/: ISSUE_TEMPLATE
.gitlab/issue_templates/: Bug.md  Feature.md
.tx/: config
data/: AboutDialog.ui.in  AlbumBannerWidget.ui  AlbumContextWidget.ui  AlbumDetailedWidget.ui  AlbumRow.ui  AlbumSimpleWidget.ui  AlbumWidget.ui  AlbumWidgetSongs.ui  AlbumsPopover.ui  AppNotification.ui  Appmenu.ui  Appmenu_librem.ui  ArtistContent.ui  ArtistInfo.ui  ArtistInformation.ui  ArtistInfos.ui  ArtistView.ui  ArtistWidget.ui  ArtworkSearch.ui  CoverBox.ui  CoverWidget.ui  CoversPopover.ui  DeviceManager.ui  DeviceManagerView.ui  DeviceManagerWidget.ui  DeviceWidget.ui  EqualizerWidget.ui  ExternalSearchRow.ui  ExternalsPopover.ui  FirstRunView.ui  FullScreen.ui  InfoContent.ui  InternalSearchRow.ui  LastfmPopover.ui  LovedWidget.ui  LyricsView.ui  Makefile.am  MiniPlayer.ui  NextPopover.ui  PlayListRow.ui  (+59 more)
flatpak/: .gitignore  Makefile  gmime-autogen.patch  org.gnome.Lollypop.json
help/: Makefile.am  Makefile.in  lollypop.omf.in  lollypop.pot
help/C/: index.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_IE/: en_IE.po
help/eo/: eo.po
help/es/: es.po
help/es_EC/: es_EC.po
help/fi/: fi.po
help/fr/: fr.po
help/ga/: ga.po
help/he/: he.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ka/: ka.po
help/lt/: lt.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sk/: sk.po
help/sr/: sr.po  sr@latin.po
help/sv/: sv.po
help/tr/: tr.po
help/tr_TR/: tr_TR.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
hooks/: pre-commit  pre-commit.archlinux  pre-commit.debian  pre-commit.fedora  pre-commit.ubuntu
lollypop/: GioNotify.py  adaptive.py  app_notification.py  application.py  application_actions.py  art.py  art_album.py  art_artist.py  art_base.py  art_radio.py  art_widgets.py  cache.py  cellrenderer.py  charts_lastfm.py  charts_spotify.py  codecs.py  collectionimporter.py  collectionscanner.py  container.py  container_device.py  container_donation.py  container_lists.py  container_notification.py  container_playlists.py  container_progress.py  container_scanner.py  container_views.py  controller_information.py  controller_playback.py  controller_progress.py  controller_view.py  controllers.py  database.py  database_albums.py  database_artists.py  database_genres.py  database_history.py  database_tracks.py  database_upgrade.py  define.py  (+177 more)
lollypop/locales/: zh_cn.py
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  el.po  en_IE.po  eo.po  es.po  es_EC.po  fi.po  fr.po  ga.po  he.po  hu.po  id.po  it.po  ka.po  lollypop.pot  lt.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sr@latin.po  sv.po  tr.po  tr_TR.po  uk.po  zh_CN.po
portal/: Makefile.am  lollypop-portal.in  org.gnome.Lollypop.Portal.service.in
save/: database_mpd.py  mpd.py
search-provider/: Makefile.am  lollypop-search-provider.ini  lollypop-sp.in  meson.build  org.gnome.Lollypop.SearchProvider.service  org.gnome.Lollypop.SearchProvider.service.in
src/: GioNotify.py  Makefile.am  album_widgets.py  albumart.py  application.py  art.py  art_album.py  art_base.py  art_downloader.py  art_radio.py  art_widgets.py  cache.py  cellrenderer.py  cellrendereralbum.py  charts.py  charts_itunes.py  charts_lastfm.py  charts_spotify.py  codecs.py  collectionscanner.py  config.py  container.py  controller.py  controllers.py  database.py  database_albums.py  database_artists.py  database_genres.py  database_history.py  database_mpd.py  database_playlists.py  database_tracks.py  database_upgrade.py  define.py  devicemanager.py  downloader.py  fastscroll.py  fullscreen.py  image_fetcher.py  inhibitor.py  (+113 more)
