appdir = $(pythondir)/lollypop/

app_PYTHON = \
    application.py\
    art_album.py\
    art_base.py\
    art.py\
    art_radio.py\
    collectionscanner.py\
    container.py\
    database_albums.py\
    database_artists.py\
    database_genres.py\
    database.py\
    database_tracks.py\
    define.py\
    fullscreen.py\
    inotify.py\
    lastfm.py\
    list.py\
    mpris.py\
    notification.py\
    player_base.py\
    player_bin.py\
    player_externals.py\
    player_linear.py\
    player.py\
    player_queue.py\
    player_radio.py\
    player_rg.py\
    player_shuffle.py\
    player_userplaylist.py\
    playlists.py\
    pop_albums.py\
    pop_covers.py\
    pop_externals.py\
    pop_infos.py\
    pop_menu.py\
    pop_next.py\
    pop_radio.py\
    pop_tunein.py\
    queue.py\
    search.py\
    selectionlist.py\
    settings.py\
    sync_mtp.py\
    tagreader.py\
    toolbar_end.py\
    toolbar_infos.py\
    toolbar_playback.py\
    toolbar.py\
    toolbar_title.py\
    track.py\
    tunein.py\
    utils.py\
    view_albums.py\
    view_container.py\
    view_device.py\
    view_playlists.py\
    view.py\
    view_radios.py\
    widgets_album.py\
    widgets_device.py\
    widgets_playlist.py\
    widgets_radio.py\
    widgets_track.py\
    window.py

