appdir = $(pythondir)/lollypop/

app_PYTHON = \
    application.py\
    art_album.py\
    art_base.py\
    art.py\
    art_radio.py\
    art_widgets.py\
    cache.py\
    cellrenderer.py\
    charts.py\
    charts_itunes.py\
    charts_lastfm.py\
    charts_spotify.py\
    codecs.py\
    collectionscanner.py\
    container.py\
    controllers.py\
    database.py\
    database_albums.py\
    database_artists.py\
    database_genres.py\
    database_history.py\
    database_tracks.py\
    database_upgrade.py\
    define.py\
    downloader.py\
    fastscroll.py\
    fullscreen.py\
    helper_dbus.py\
    inotify.py\
    lastfm.py\
    lio.py\
    list.py\
    loader.py\
    localized.py\
    miniplayer.py\
    mpris.py\
    mpris_legacy.py\
    notification.py\
    player_base.py\
    player_bin.py\
    player_externals.py\
    player_linear.py\
    player.py\
    player_queue.py\
    player_radio.py\
    player_plugins.py\
    player_shuffle.py\
    player_userplaylist.py\
    playlists.py\
    pop_album.py\
    pop_albums.py\
    pop_artwork.py\
    pop_externals.py\
    pop_info.py\
    pop_lastfm.py\
    pop_menu.py\
    pop_next.py\
    pop_playlists.py\
    pop_queue.py\
    pop_radio.py\
    pop_search.py\
    pop_tunein.py\
    progressbar.py\
    radios.py\
    search_item.py\
    search_itunes.py\
    search_local.py\
    search_network.py\
    search_spotify.py\
    selectionlist.py\
    settings.py\
    sqlcursor.py\
    sync_mtp.py\
    tagreader.py\
    toolbar_end.py\
    toolbar_info.py\
    toolbar_playback.py\
    toolbar.py\
    toolbar_title.py\
    touch_helper.py\
    objects.py\
    tunein.py\
    utils.py\
    view_albums.py\
    view_artist.py\
    view_artist_albums.py\
    view_container.py\
    view_device.py\
    view_first_run.py\
    view_playlists.py\
    view.py\
    view_radios.py\
    web.py\
    web_youtube.py\
    web_jgm90.py\
    widgets_album.py\
    widgets_album_detailed.py\
    widgets_album_simple.py\
    widgets_context.py\
    widgets_device.py\
    widgets_indicator.py\
    widgets_info.py\
    widgets_loved.py\
    widgets_playlist.py\
    widgets_radio.py\
    widgets_rating.py\
    widgets_track.py\
    widgets_web.py\
    wikipedia.py\
    window.py\
    GioNotify.py
